<resources>
    <string name="app_name">Stock Tracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="search">Search</string>
    <string name="stock_tracker">Stock Tracker</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_stock">Search stock</string>
    <string name="server_url">https://www.google.com/finance</string>
    <string name="backend_url">http://52.26.182.191:9000</string>
    <string name="exchange">Exchange</string>
    <string name="date_added">Date Added</string>
    <string name="ticker">Ticker</string>
    <string name="refresh">Refresh</string>
    <string name="enter_watchlist_name">Enter watchlist Name</string>
    <string name="enter_portfolio_name">Enter portfolio Name</string>
    <string name="create_new_watchlist">Create new watchlist</string>
    <string name="edit">Edit</string>
    <string name="edit_watchlist">Edit watchlist</string>
    <string name="create_new_portfolio">Create new portfolio</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="edit_portfolio">Edit Portfolio</string>
    <string name="select_stock">Select Stock</string>
    <string name="quantity">Quantity</string>
    <string name="long_short">Long/Short</string>
    <string name="price">Price</string>
    <string name="radio_long">Long</string>
    <string name="radio_short">Short</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="trade_date_hint">Transaction date</string>
    <string name="avg_price">Average Price</string>
    <string name="recompute_positions">Recompute Positions</string>
    <string name="attherate">\@</string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="default_refresh_interval">30</string>
    <string name="auto_refresh_enabled">Auto Refresh</string>
    <string name="auto_refresh_pref_summary">Refresh prices in background</string>
    <string name="auto_refresh_interval_summary">Refresh time in minutes</string>
    <string name="menu_settings">Settings</string>
    <string name="watchlist">Watchlist</string>
    <string name="portfolio">Portfolio</string>
    <string name="help">Help</string>
    <string name="default_watchlist_name">Default Watchlist</string>
    <string name="default_portfolio_name">Default Portfolio</string>
    <string name="create_new_transaction">New Transaction</string>
    <string name="home">Home</string>
    <string name="porfolio_summary">Portfolio Summary</string>
    <string name="open_positions">Open Positions</string>
    <string name="radio_buy">Buy</string>
    <string name="radio_sell">Sell</string>
    <string name="buy_sell">Buy or Sell</string>
    <string name="closed_positions">Closed Positions</string>
    <string name="backup_restore"><![CDATA[Backup & Restore]]></string>
    <string name="world_indices">World Indices</string>
    <string name="refresh_complete">Refresh Complete</string>
    <string name="last_trade_price">Last Trade Price</string>
    <string name="loading">Loading...</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Ticker/Company Name</string>
    <string name="company_name">Company Name</string>
    <string name="refreshing">Refreshing</string>
    <string name="net_asset">Net Asset</string>
    <string name="realized_gain">Realized Gain/Loss</string>
    <string name="unrealized_gain">Unrealized Gain/Loss</string>
    <string name="returns">Returns</string>
    <string name="news_title">News title</string>
    <string name="news_description">News Contents</string>
    <string name="blog_title">Title</string>
    <string name="blog_content">Content</string>
    <string name="blog_date">Date</string>
    <string name="value_picks">Value Picks</string>
    <string name="more">Full article</string>
    <string name="comments">Comments</string>
    <string name="full_article">More</string>
    <string name="share">Share</string>
    <string name="go_to_top">Top</string>
</resources>
