<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp" android:layout_margin="3dp" >


    <LinearLayout
        android:layout_width="match_parent" android:padding="16dp"
        android:layout_height="match_parent" android:orientation="vertical">

        <TextView android:id="@+id/title"
            android:layout_width="match_parent" android:text="@string/blog_title"
            android:layout_height="wrap_content" style="@style/LargeFont.Bold" />

        <View
            android:layout_width="match_parent" android:layout_gravity="bottom"
            android:layout_height="1dp" android:background="@color/divider"/>

        <TextView android:id="@+id/date"
            android:layout_width="match_parent" android:text="@string/blog_date"
            android:layout_height="wrap_content" style="@style/MediumFont" />

        <TextView android:id="@+id/description"
            android:layout_width="match_parent" android:text="@string/blog_content"
            android:layout_height="wrap_content" style="@style/SmallFont" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="32dp" android:layout_gravity="left"
            android:textSize="12sp" android:id="@+id/more_button"
            android:text="@string/more" android:background="@android:color/transparent" />

        <Button
            android:layout_width="wrap_content" android:layout_gravity="left" android:layout_marginLeft="8dp"
            android:layout_height="32dp" android:id="@+id/comment_count" android:textSize="12sp"
            android:text="@string/comments" android:background="@android:color/transparent" />
    </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>