<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent" android:padding="16dp"
        android:layout_height="match_parent" android:orientation="horizontal">

        <TextView android:id="@+id/exchange"
            android:layout_width="0dp" android:layout_weight="1" android:text="@string/exchange"
            android:layout_height="match_parent" style="@style/LargeFont" />

        <TextView android:id="@+id/name"
            android:layout_width="0dp" android:layout_weight="3" android:text="@string/company_name"
            android:layout_height="match_parent" style="@style/LargeFont"/>

        <TextView android:id="@+id/ticker"
            android:layout_width="0dp" android:text="@string/ticker"
            android:layout_height="match_parent" android:layout_weight="1" style="@style/LargeFont" />

    </LinearLayout>

    <View
        android:layout_width="match_parent" android:layout_gravity="bottom"
        android:layout_height="1dp" android:background="@color/divider"/>
</FrameLayout>