<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="2dp" android:layout_margin="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical">


        <TextView android:id="@+id/position_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="8dp" android:paddingLeft="16dp"
            android:text="@string/open_positions"
            style="@style/LargeFont.Inverse" />


       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:padding="16dp" android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent" android:layout_weight="1" android:orientation="vertical">
                <TextView
                    android:id="@+id/ticker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MediumFont" android:text="ticker" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" style="@style/SmallFont" android:text="Title" />
            </LinearLayout>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent" android:layout_weight="1" android:orientation="vertical">
               <TextView
                   android:id="@+id/quantity"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" style="@style/MediumFont" android:text="@string/quantity" />

               <TextView
                   android:id="@+id/avg_price"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" style="@style/MediumFont" android:text="@string/avg_price" />

           </LinearLayout>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent" android:layout_weight="1" android:orientation="vertical">
               <TextView
                   android:id="@+id/last_trade_price"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" style="@style/MediumFont" android:text="Price" />

               <TextView
                   android:id="@+id/change"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" style="@style/MediumFont" android:text="Change" />

           </LinearLayout>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent" android:layout_weight="1" android:orientation="vertical">
               <TextView
                   android:id="@+id/market_value"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" style="@style/MediumFont"
                   android:text="Market Value" />

               <TextView
                   android:id="@+id/gain_loss"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" style="@style/MediumFont"
                   android:text="Gain/Loss" />
           </LinearLayout>

        </LinearLayout>
        </LinearLayout>


</android.support.v7.widget.CardView>
